@@ -24,6 +24,7 @@ class Base(BrowserView):
     def __init__(self, context, request):
         super(BrowserView, self).__init__(context, request)
         self.editor = IImageEditorAdapter(self.context)
+        self.editor.set_field(request.get('field'))
         self.editor.clear_edits()       # clear undo stack on invocation
         self.actions = [(name, action.class_(self.context)) for name, action in get_actions()]
 
